# Python_AlphaEdTech

./: README.md
PythonAvancado/Aula10-Args_e_Kwargs/args_kwargs/: main.py  pyproject.toml
PythonAvancado/Aula12_OOP_Basico/: main.py  pyproject.toml
PythonAvancado/Aula13_Heranca/heranca/: main.py  pyproject.toml
PythonAvancado/Aula16_Pytest/: pytest.ini
PythonAvancado/Aula16_Pytest/pytests/: pyproject.toml
PythonAvancado/Aula16_Pytest/pytests/pytests/: main.py  run.py
PythonAvancado/Aula16_Pytest/pytests/pytests/characters/: Abadango Cluster Princess.txt  Abradolf Lincler.txt  Adjudicator Rick.txt  Agency Director.txt  Albert Einstein.txt  Alexander.txt  Alien Googah.txt  Alien Morty.txt  Alien Rick.txt  Amish Cyborg.txt  Annie.txt  Antenna Morty.txt  Ants in my Eyes Johnson.txt  Jerry Smith.txt  Morty Smith.txt  Rick Sanchez.txt  Summer Smith.txt
PythonAvancado/Aula16_Pytest/pytests/tests/: conftest.py  test_main.py
PythonAvancado/Aula4_Funcoes_e_Tipos/: .python-version  pyproject.toml  teste.py
PythonAvancado/Aula5_e_6_High_Order_Functions/HOF/: pyproject.toml  weird_prod.py
PythonAvancado/Aula7_e_8_Iterators_e_Generators/Iterators_e_Generators/: main.py  pyproject.toml
PythonAvancado/Aula9_Dicionarios/: main.py  pyproject.toml
Teste2_OpenCV/try2_opencv/: pyproject.toml
Teste2_OpenCV/try2_opencv/try2_opencv/: PI02-01.py  PI03-EX01.py  image-plot.py  recorteimg.tif
