[tool.poetry]
name = "aula4-funcoes-e-tipos"
version = "0.1.0"
description = ""
authors = ["Athos Balmant <athos.kyoto@gmail.com>"]
readme = "README.md"
packages = [{include = "aula4_funcoes_e_tipos"}]

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^0.991"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
