[tool.poetry]
name = "try2-opencv"
version = "0.1.0"
description = ""
authors = ["Athos Balmant <athos.kyoto@gmail.com>"]
readme = "README.md"
packages = [{include = "try2_opencv"}]

[tool.poetry.dependencies]
python = "3.11.1"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
scikit-image = "^0.19.3"
requests = "^2.28.2"
mypy = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
