[tool.poetry]
name = "pytests"
version = "0.1.0"
description = ""
authors = ["Athos Balmant <athos.kyoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "^1.26.14"
requests = "^2.28.2"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
